My Landing Page/src/style.css
body {
    padding: 0;
    margin: 0;
    background: whitesmoke;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    text-decoration: none;
    overflow-x: hidden;
}
body.dark-mode {
    background: #1a1919;
}

/* light/dark MODE BUTTON */
button {
    position: fixed;
    top: 0;
    left: 0;
    margin-left: 10px;
    margin-top: 10px;
	border-radius: 40px;
	font-size: 1.2rem;
	height: 40px;
	width: 120px;
	border: none;
	background-color: #4e545c;
	color: #e5e8e8;
	transition: all 0.5s linear;
}

button:hover {
	background-color: #000401;
}

button.dark-mode {
	background-color: #e5e8e8;
	color: #4e545c;
}

button.dark-mode:hover {
	background-color: #4e545c;
	color: #e5e8e8;
}

/* HEADER */
.header {
    height: 100vh;
    width: 100%;
    background: linear-gradient(-45deg,rgb(73, 12, 73, 0.5), rgba(109, 57, 65, 0.9), rgb(40, 70, 116, 0.9), rgb(25, 132, 165, 0.5)), url('../img/nebula.jpeg');
    background-size: 250%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: center;
    animation: backgroundTransition 16s ease-in-out infinite;
}
.header.dark-mode {  /* black hole */
    animation: none;
    background: linear-gradient(-45deg,rgba(27, 7, 27, 0.7), rgba(1, 21, 27, 0.7)), url('../img/blackhole.jpg');
    background-size: 150%;
    background-position: center;
    background-repeat: no-repeat;
    animation: backgroundTransition-dark 16s ease-in-out infinite;
    
}
@keyframes backgroundTransition {
    0% {
        background-position: 0% 80%;
    }
    50% {
        background-position: 80% 100%;
    }
    100% {
        background-position: 0% 80%;
    }
}
@keyframes backgroundTransition-dark {
    0% {
        background-size: 140%;
    }
    50% {
        background-size: 150%;
    }
    100% {
        background-size: 140%;
    }
}

h1 {  /*tarso galvao*/
    text-transform: uppercase;
    letter-spacing: 1.5px;
    color: whitesmoke;
    animation: header-text 2s 1;
    margin-top: -5px;
}
h1.dark-mode {
    color:rgb(93, 73, 129);
}

h3 {  /*full stack dev*/
    margin-top: -20px;
    font-family: Arial;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 1.5px;
    color: #1b1a1a;
    animation: header-text 2s 1;
}
h3.dark-mode {
    color: gray;
}

@keyframes header-text {
    0%{
        color: transparent;
    }
    35%{
        letter-spacing: 5px;
        margin-bottom: -10px;  
    }
    85%{
        letter-spacing: 1.5px;
    }
}

.header-image {
    visibility: visible;
    opacity: 1;
    transform: rotate(-10deg);
    height: 40%;
    border-radius: 50%;
    margin-bottom: 50px;
}

#Rocket {
    position: absolute;
    margin: 0;
    margin-top: 150px;
    padding: 15vh;
    left: 50%;
    right: 50%;
    animation: infinite-spinning 4s infinite;
    animation-timing-function: linear;
    transform-origin: 0% 0%;
}
  
@keyframes infinite-spinning {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(-360deg);
    }
}

  
/* menu hamburger */
.checkbox-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.checkbox {
    height: 100px;
    width: 90px;
    position: fixed;
    top: 0;
    right: 0;
    display: flex;
    justify-content: center;
    cursor: pointer;
    z-index: 9999;
    transition: 400ms ease-in-out 0;
}

.checkbox .trace {
    width: 50px;
    height: 2px;
    background-color: white;
    position: absolute;
    border-radius: 4px;
    transition: 0.5s ease-in-out;
}

.checkbox .trace:nth-child(1) {
    top: 26px;
    transform: rotate(0);
}
.checkbox .trace:nth-child(2) {
    top: 46px;
    transform: rotate(0);
}
.checkbox .trace:nth-child(3) {
    top: 66px;
    transform: rotate(0);
}

/* some com o checkbox original */
#toggle {
    display: none;
}

/* MENU c/ links */
.menu {
    position: fixed;
    top: 28px;
    right: 30px;
    background: transparent;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    box-shadow: 0px 0px 0px 0px gray;
    z-index: -1;
    transition: 400ms ease-in-out 0s;
}

.menu-items {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    opacity: 0;
    visibility: hidden;
    transition: 400ms ease-in-out 0s;
}

.menu-items ul {
    list-style-type: none;
    text-align: right;
}

.menu-items ul li a {
    margin: 10px 0;
    color: rgb(83, 46, 83);
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-size: 35px;
}
.menu-items.dark-mode ul li a {
    color: gray;
}

/* animacao do menu hamburger*/

#toggle:checked + .checkbox .trace:nth-child(1) {
    transform: rotate(45deg);
    background-color: purple;
    top: 47px;
}
#toggle:checked + .checkbox .trace:nth-child(2) {
    transform: translateX(100px);
    width: 30px;
    visibility: hidden;
    opacity: 0;
}
#toggle:checked + .checkbox .trace:nth-child(3) {
    transform: rotate(-45deg);
    background-color: purple;
    top: 48px;
}

/* animacao do conteudo do menu */

#toggle:checked + .checkbox {
    background-color: whitesmoke;
}
#toggle:checked + .checkbox.dark-mode { /* cor do fundo do hamburguer*/
    background-color: #1b1a1a;
}

#toggle:checked ~ .menu { /* COR DO FUNDO DO MENU ABERTO*/
    box-shadow: 0px 0px 0px 100vmax whitesmoke;
    z-index: 1;
}
#toggle:checked ~ .menu.dark-mode { /* COR DO FUNDO DO MENU ABERTO*/
    box-shadow: 0px 0px 0px 100vmax #1b1a1a;
    z-index: 1;
}

#toggle:checked ~ .menu-items {
    visibility: visible;
    opacity: 1;
}


/* api iframe */
#iFrame{
    width: 400px;
    height: 420px;
    top: 50%;
    left: 50%;
    border: none;
}

/* CARDS */
.card-iframe{
    margin-left: 30%;
}
.container {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 3rem 0;
    text-decoration: none;
}

.card-container {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 90%;
    text-decoration: none;
}

/* cards */
.card-all{
    margin: 3rem 0 0;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgb(126, 236, 255); /* cor do texto dos cards apos hover */
    font-weight: bold;
    cursor: pointer;
    text-decoration: none;
    filter: grayscale(0.9);
    transition: 0.3s;
}

.card-0{  /* pie chart*/
    height: 470px;
    width: 300px;
    filter: none;
}
.card-1{ /*GITHUB*/
    height: 300px;
    width: 300px;
    border-radius: 50%;
    background-image: url(../img/github.png);  
}
.card-2{ /*LINKEDIN*/
    height: 300px;
    width: 300px;
    border-radius: 50%;
    background-image: url(../img/linkedin.png);
}
.card-3{ /*URCADE*/
    height: 250px;
    width: 250px;
    border-radius: 50%;
    background-image: url(../img/urcade.png);
}

.card-4{ /*PLAYGROUND*/
    height: 250px;
    width: 250px;
    background-image: url(../img/tom.png);
}

/* textos ao lado dos cards */
.card-text {
    width: 40%;
    font-family: sans-serif;
    letter-spacing: 1px;
    color: gray; /* cor do texto ao lado dos cards*/
}

.card-wrapper {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.card-wrapper::before {
    content: '';
    position: absolute;
    height: 150px;
    width: 150px;
    display: block;
    border: 4px dashed rgb(13, 160, 197); /* cor da borda do card antes hover*/
    border-radius: 50%;
    opacity: 0;
    text-decoration: none;
    transition: 0.3s;
}

.card-wrapper h2 {
    font-size: 24px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 4px;
    margin: 0;
    transition: 0.3s;
    margin-top: 125px;
}

.card-wrapper p {
    font-size: 0;
    visibility: hidden;
    opacity: 0;
    font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
    transition: 0.3s;
}

.card-all:hover {
    filter: grayscale(0.6);
}
.card-0:hover {
    filter:none;
}

.card-all:hover > .card-wrapper::before {
    text-decoration: none;
    opacity: 1;
    width: 285px;
    height: 285px;
}
/* texto pequeno que aparece apos o hover nos cards */
.card-all:hover > .card-wrapper p {
    text-decoration: none;
    opacity: 1;
    visibility: visible;
    font-size: 12px;
    font-weight: bolder;
    color: whitesmoke; /* cor do texto extra ao dar hover*/
    animation: wordBounce 1s ease-in-out infinite; /* controle da animacao do bounce vertical */
}

/* animacao do bounce vertical em si */
@keyframes wordBounce {
    0% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(10px);
    }
    100% {
        transform: translateY(0);
    }
}

.links {
    text-decoration: none;
}
/* FOOTER */
.footer {
    height: 30px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #2c2a2a;
    background: linear-gradient(-45deg, rgb(100, 17, 100), rgb(129, 73, 82), rgb(40, 70, 116), rgb(25, 132, 165));
    background-size: 400% 400%;
    animation: backgroundTransition 8s ease-in-out infinite;
}
.footer.dark-mode {
    background: #1b1a1a;
}
.footer.dark-mode a {
    color: rgb(139, 135, 135);
}

.footer a {
    text-decoration: none;
    color: #1b1a1a;
}

/* RESPONSIVO */

@media (max-width: 810px) {
    #Rocket{
        margin-top: 250px;
        padding: 12vmax;
    }
    .card-iframe{
        margin-left: 5%;
    }
    button{
        margin-top: 23px;
        margin-left: 20px;
        font-size: 11px;
        width: 50px;
        height: 50px;
    }
    
    .checkbox .trace {
        width: 40px;
        height: 5px;
    }
    .header.dark-mode{
        animation: none;
        background-size: 325%;
        background-position: center;
        background-repeat: no-repeat;
    }
    h1 {
        margin-top: -20px;
    }
    .header-image{
        margin-top: 100px;
        height: 35%;
    }
    .checkbox .trace:nth-child(1) {
        top: 25px;
        transform: rotate(0);
    }
    .checkbox .trace:nth-child(2) {
        top: 40px;
        transform: rotate(0);
    }
    .checkbox .trace:nth-child(3) {
        top: 55px;
        transform: rotate(0);
    }
    .container {
        margin-top: 0;
    }
    .card-container {
        flex-direction: column;
    }
    .container .card-container:nth-child(1),
    .container .card-container:nth-child(3),
    .container .card-container:nth-child(5) {
        flex-direction: column-reverse;
    }
    .card {
        height: 250px;
        width: 250px;
    }
    .card-text {
        width: 90%;
        margin-top: 2rem;
        text-align: center;
    }
    .card:hover > .card-wrapper::before {
        height: 220px;
        width: 220px;
    }
    .card:hover > .card-wrapper p {
        font-size: 10px;
    }
    .footer,
    .footer.dark-mode{
        font-size: 12px;
    }
}

